--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint:biome": "biome check ./",
     "lint:packages": "turbo run lint",
     "format": "biome check --write ./",
-    "format-fix": "biome check --write --unsafe ./"
+    "format-fix": "biome check --write --unsafe ./",
+    "release": "run-s build release-ci:*",
+    "release:publish": "bash ./scripts/publish-ci.sh",
+    "changeset": "changeset"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.29.6",
     "@types/node": "^24.3.0",
     "npm-run-all2": "^8.0.4",
     "tsup": "^8.5.0",
