--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:packages": "turbo run lint",
     "format": "biome check --write ./",
     "format-fix": "biome check --write --unsafe ./",
-    "release": "run-s build release-ci:*",
+    "release": "run-s build release:*",
     "release:publish": "bash ./scripts/publish-ci.sh",
     "changeset": "changeset"
   },
