fix: bundle package

--- a/apps/vscode-mnsc/package.json
+++ b/apps/vscode-mnsc/package.json
@@ -223,8 +223,8 @@
     }
   },
   "scripts": {
-    "build": "tsup src/extension.ts --format esm --sourcemap --clean --out-dir dist --external vscode",
-    "dev": "tsup src/extension.ts --format esm --sourcemap --watch --out-dir dist --external vscode",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "lint": "biome check ./",
     "package": "pnpm run build && vsce package --no-dependencies --out dist/",
     "publish": "run-s build publish:*",
